--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -89,9 +89,9 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 %\titlebanner{}        % These are ignored unless
 \preprintfooter{Draft}   % 'preprint' option specified.
 
-%% \title{Hazelnut: A Bidirectionally Typed \\ Structure Editor
-%%  Calculus}
-\title{Hazelnut:\\A Bidirectionally Typed Structure Editor Calculus}
+\title{Hazelnut: A Bidirectionally Typed \\ Structure Editor
+ Calculus}
+% \title{Hazelnut:\\A Bidirectionally Typed Structure Editor Calculus}
 
 %\authorinfo{\vspace{-2px}}{}{}
 \authorinfo{~}{~}{\vspace{-10px}}
@@ -139,7 +139,7 @@ Na\"ively, this prohibition on ill-typed edit states would force the programmer 
 \label{sec:mech}\label{sec:mt}
 \input{agda}
 
-\clearpage
+% \clearpage
 
 % \section{Dynamics of Hazelnut}\label{sec:dynamics}
 
