--- a/implementation.tex
+++ b/implementation.tex
@@ -1,11 +1,5 @@
+% !TEX root = hazelnut-popl17.tex
 \subsection{Implementation Concepts}
-
-\begin{figure}
-\centering
-\includegraphics[width=0.90\columnwidth]{impl-overview2}
-\caption{}
-\label{fig:impl-overview}
-\end{figure}
 
 
 
@@ -40,3 +34,11 @@ The work-in-progress code as well as directions for how to compile and run it ca
 
 A substantially simpler system that we developed while exploring the ideas that led to Hazelnut can be found at the following URL:
 \url{http://www.cs.cmu.edu/~comar/nestedpairs/}.
+
+
+\begin{figure}
+\centering
+\includegraphics[width=0.90\columnwidth]{impl-overview2}
+\caption{...}
+\label{fig:impl-overview}
+\end{figure}
